--- a/circle.yml
+++ b/circle.yml
@@ -8,10 +8,12 @@ machine:
     CODECLIMATE_DOCKER_REGISTRY_USERNAME: circleci
     CODECLIMATE_DOCKER_REGISTRY_EMAIL: ops@codeclimate.com
 
+dependencies:
+  override: #noop
+
 test:
   override:
-    - bundle exec rake
-    - docker build -t=$PRIVATE_REGISTRY/$CIRCLE_PROJECT_REPONAME:b$CIRCLE_BUILD_NUM .
+    - IMAGE_NAME="$PRIVATE_REGISTRY/$CIRCLE_PROJECT_REPONAME:b$CIRCLE_BUILD_NUM" make test
 
 deployment:
   registry:
