--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,3 +1,5 @@
+AllCops:
+  TargetRubyVersion: 2.2
 Metrics/AbcSize:
   Enabled: false
 
@@ -16,7 +18,7 @@ Style/StringLiterals:
 Style/Documentation:
   Enabled: false
 
-Style/TrailingComma:
+Style/TrailingCommaInLiteral:
   Enabled: false
 
 Style/ClassAndModuleChildren:
