Update Rubocop config to match CC styleguide
A small update to bring our rubocop config up-to-date with our styleguide.
Following the refactor in #16, few changes in the codebase were needed.

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,4 +1,15 @@
 engines:
+  bundler-audit:
+    enabled: true
+  duplication:
+    enabled: true
+    config:
+      languages:
+      - ruby
+    exclude_paths:
+    - spec/
+  fixme:
+    enabled: true
   rubocop:
     enabled: true
     exclude_fingerprints:
