--- a/circle.yml
+++ b/circle.yml
@@ -12,11 +12,11 @@ dependencies:
       --env GCR_JSON_KEY
       --volume /var/run/docker.sock:/var/run/docker.sock
       codeclimate/patrick pull || true
-    - make image
+    - make test-image
 
 test:
   override:
-    - make citest
+    - make test
 
 deployment:
   registry:
