--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,6 +35,7 @@ workflows:
     jobs:
       - build_and_test
       - release_images:
+          context: Quality
           requires:
             - build_and_test
           filters:
