QUA-958: Deprecate image push to GCR (#82)
* Remove login to GCR

* Release to Dockerhub

* tag master and channel branches

* login to Dockerhub

* fix syntax error in bin/deploy

* dont tag image as "latest" when deploying a channel

* override RELEASE_TAG on empty string

* Trigger checks again

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,7 +32,7 @@ jobs:
               circleci step halt
             fi
       - run: make image
-      - run: echo "$GCR_JSON_KEY" | docker login -u _json_key --password-stdin us.gcr.io
+      - run: echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
       - run: bin/deploy
       - run: send_webhook
 
